--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Nos produits - AUTOBOOST{% endblock %}
 {% block content %}
-<img src="{{asset('assets/img/panameraResized.jpg')}}" alt="" class="d-block w-100">      
+<img src="{{asset(assets/img/panameraResized.jpg)}}" alt="" class="d-block w-100">      
 <br>
 <br>
 <br>
