--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,49 +1,25 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="La pièce performance en caraïbe">
         <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
         <meta name="generator" content="Jekyll v4.1.1">
+        <!-- Title -->
         <title>{% block title %}AUTOBOOST - La pièce performance{% endblock %}</title>
+         <!-- Bootstrap -->
+        {% block stylesheets %}{{ encore_entry_link_tags('app') }}{% endblock %}
+        <!-- Script Js -->
+        {% block javascripts %}{{ encore_entry_script_tags('app') }}{% endblock %}
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Bootstrap icons-->
-        <link href="#" rel="stylesheet" />
         <!-- FontAwesome icons-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-        <!-- Bootstrap -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="#" rel="stylesheet">
-        <!-- Custom styles for this template -->
-        <link href="#" rel="stylesheet">
-        <!-- Script Js -->
-        <script src="#"></script>
-        <!-- Bootstrap Bundule Js -->                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      <!-- Product actions-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-
         
-        <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-        }
-
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-        </style>
     </head>
     <main role="main">
-    <!-- NavBar Start-->
+    <!-- Header-->
     <header>
          <h6>La pièce haute performance en martinique.</h6>
         <!-- Topbar Start -->
