update projet wipexcorp 30-09-22

--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
  <!-- Header-->
-<img src="https://www.pierre-giraud.com/bootstrap-carrousel-slide-1.jpg" alt="" class="d-block w-100"> 
+<img src="{{asset('assets/img/bmw-modified.jpeg')}}" alt="" class="d-block w-100"> 
 <br>    
 <br>    
 <br>    
