--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,166 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="La pièce performance en caraïbe">
-        <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-        <meta name="generator" content="Jekyll v4.1.1">
-        <!-- Title -->
-        <title>{% block title %}AUTOBOOST - La pièce performance{% endblock %}</title>
-         <!-- Bootstrap -->
-        {% block stylesheets %}{{ encore_entry_link_tags('app') }}{% endblock %}
-        <!-- Script Js -->
-        {% block javascripts %}{{ encore_entry_script_tags('app') }}{% endblock %}
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- FontAwesome icons-->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-        
-    </head>
-    <main role="main">
-    <!-- Header-->
-    <header>
-         <h6>La pièce haute performance en martinique.</h6>
-        <!-- Topbar Start -->
-        <div class="container-fluid bg-light p-0">
-            <div class="row gx-0 d-none d-lg-flex">
-                <div class="col-lg-7 px-5 text-start">
-                    <div class="h-100 d-inline-flex align-items-center py-3 me-4">
-                        <small class="fa fa-map-marker-alt text-primary me-2"></small>
-                        <small>ZA Bois Carré 97232 Le Lamentin Martinique</small>
-                    </div>
-                    <div class="h-100 d-inline-flex align-items-center py-3">
-                        <small class="far fa-clock text-primary me-2"></small>
-                        <small>Lun - Sam : 09.00 - 19.00</small>
-                    </div>
-            </div>
-            <div class="col-lg-5 px-5 text-end">
-                <div class="h-100 d-inline-flex align-items-center py-3 me-4">
-                    <small class="fa fa-phone-alt text-primary me-2"></small>
-                    <small>05 96 79 61 97</small>
-                </div>
-                    <div class="h-100 d-inline-flex align-items-center">
-                        <a class="btn btn-sm-square bg-black text-primary me-1" href="https://fr-fr.facebook.com/pages/category/Automotive-Customization-Shop/AUTOBOOST-256129727770285/"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-sm-square bg-black text-primary me-1" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-sm-square bg-black text-primary me-0" href="https://www.instagram.com/autoboost_fwi/?hl=fr"><i class="fab fa-instagram"></i></a>
-                    </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Topbar End -->
-        <!-- NavBar Start-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="{{ path('home') }}">AutoBoost</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link" href="{{ path('app_who_we_are') }}">Qui nous sommes</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{{ path('app_contact') }}">Contacter-Nous</a></li>
-                           <li class="nav-link dropdown-toggle" id="navbarDropdown" href="{{ path('app_products') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</li>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="{{ path('app_products') }}">All Products</a>
-                                <hr class="dropdown-divider"/>
-                                <a class="dropdown-item" href="{{ path('app_services') }}">Nos prestations</a>
-                                <a class="dropdown-item" href="{{ path('app_something') }}">Nos engagements</a>
-                            </ul>
-                        </li>
-                    </ul>
-                    <div class="navbar-item-custom">
-					    {% if app.user %}
-					    <a href="{{ path('account') }}">Mon compte
-					    <small>({{ app.user.firstname }})</small>
-					    </a>
-					    |
-					    <a href="{{ path('app_logout')}}">Déconnexion</a>
-					    {% else %}
-					    <a href="{{ path('app_login') }}">Connexion</a>
-					    |
-					    <a href="{{ path('app_register') }}">Inscription</a>
-					    {% endif %}
-				    </div>
-                    
-                <div class="mt-5"></div>
-                    <div class="navbar-icon">
-                        <form class="d-flex">
-                            <button class="btn btn-outline-dark" type="submit">
-                                <i class="bi-cart-fill me-1"></i>
-                                <a href="{{ path('app_cart')}}">Mon Panier</a>
-                                <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                            </button>
-                        </form>
-                    </div>
-                </div>
-        </nav>
-        <!-- NavBar Stop-->
-        </header>
-        <!-- Header Stop-->
-        <!-- Body Start-->
-        <body>
-       
-    <!-- definition du block content -->
-    {% block content %}
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="description" content="La pièce performance en caraïbe">
+		<meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+		<meta
+		name="generator" content="Jekyll v4.1.1">
+		<!-- Title -->
+		<title>
+			{% block title %}AUTOBOOST - La pièce performance
+			{% endblock %}
+		</title>
+		<!-- Bootstrap -->
+		{% block stylesheets %}
+			{{ encore_entry_link_tags('app') }}
+		{% endblock %}
+		<!-- Script Js -->
+		{% block javascripts %}
+			{{ encore_entry_script_tags('app') }}
+		{% endblock %}
+		<!-- Favicon-->
+		<link
+		rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
+		<!-- FontAwesome icons-->
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 
-    {% endblock %}
-    <!-- /.container -->
-    </div>
-    </body>
-    <!-- Body Stop-->
-    <!-- FOOTER -->
-    <footer class="footer-custom">
-            <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-lg-3 col-md-23">
-                    <h4 class="text-light mb-4">Adresse</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>ZA Bois Carré 97232 Le Lamentin Martinique</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>05 96 79 61 97</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>atb@wipexcorp.com</p>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Horaire D'Ouverture</h4>
-                    <h6 class="text-light">Lundi - Samedi:</h6>
-                    <p class="mb-2">09.00 - 19.00</p>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Services</h4>
-                    <a class="btn btn-link" href="">Test Diagnostique</a>
-                    <a class="btn btn-link" href="">Atelier Moteur</a>
-                    <a class="btn btn-link" href="">Reprogrammation Moteur</a>
-                    <a class="btn btn-link" href="">Le Coin Moto</a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-2">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-                    <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Votre adresse mail">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="copyright">
-                <div class="row">
-                        <div class="text-center text-md-center mb-3 mb-md-0">
-                        Copyright &copy; <a class="border-bottom" href="{{ path('app_products') }}">AutoBoost 2022</a> <small>La pièce performance dans la caraïbe, All Right Reserved.</small>
-                        <br>
+	</head>
+	<main
+		role="main">
+		<!-- Header-->
+		<header>
+			<h6>La pièce haute performance en martinique.</h6>
+			<!-- Topbar Start -->
+			<div class="container-fluid bg-light p-0">
+				<div class="row gx-0 d-none d-lg-flex">
+					<div class="col-lg-7 px-5 text-start">
+						<div class="h-100 d-inline-flex align-items-center py-3 me-4">
+							<small class="fa fa-map-marker-alt text-primary me-2"></small>
+							<small>ZA Bois Carré 97232 Le Lamentin Martinique</small>
+						</div>
+						<div class="h-100 d-inline-flex align-items-center py-3">
+							<small class="far fa-clock text-primary me-2"></small>
+							<small>Lun - Sam : 09.00 - 19.00</small>
+						</div>
+					</div>
+					<div class="col-lg-5 px-5 text-end">
+						<div class="h-100 d-inline-flex align-items-center py-3 me-4">
+							<small class="fa fa-phone-alt text-primary me-2"></small>
+							<small>05 96 79 61 97</small>
+						</div>
+						<div class="h-100 d-inline-flex align-items-center">
+							<a class="btn btn-sm-square bg-black text-primary me-1" href="https://fr-fr.facebook.com/pages/category/Automotive-Customization-Shop/AUTOBOOST-256129727770285/">
+								<i class="fab fa-facebook-f"></i>
+							</a>
+							<a class="btn btn-sm-square bg-black text-primary me-1" href="">
+								<i class="fab fa-twitter"></i>
+							</a>
+							<a class="btn btn-sm-square bg-black text-primary me-0" href="https://www.instagram.com/autoboost_fwi/?hl=fr">
+								<i class="fab fa-instagram"></i>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- Topbar End -->
+		<!-- NavBar Start-->
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container px-4 px-lg-5">
+				<a class="navbar-brand" href="{{ path('home') }}">AutoBoost</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('app_who_we_are') }}">Qui nous sommes</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('app_contact') }}">Contacter-Nous</a>
+						</li>
+						<li class="nav-link dropdown-toggle" id="navbarDropdown" href="{{ path('app_products') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</li>
+						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="{{ path('app_products') }}">All Products</a>
+							<hr class="dropdown-divider">
+							<a class="dropdown-item" href="{{ path('app_services') }}">Nos prestations</a>
+							<a class="dropdown-item" href="{{ path('app_something') }}">Nos engagements</a>
+						</ul>
+					</li>
+				</ul>
+				<div class="navbar-item-custom">
+					{% if app.user %}
+						<a href="{{ path('account') }}">Mon compte
+							<small>({{ app.user.firstname }})</small>
+						</a>
+						|
+						<a href="{{ path('app_logout')}}">Déconnexion</a>
+					{% else %}
+						<a href="{{ path('app_login') }}">Connexion</a>
+						|
+						<a href="{{ path('app_register') }}">Inscription</a>
+					{% endif %}
+				</div>
 
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">Computex-Services</a>
-                        <br>
-                        <small><a href="#">Privacy</a> &middot; <a href="#">Terms</a></small>
-                        <br>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
-    </footer>
-</main>                                                                                                                              
+				<div class="mt-5"></div>
+				<div class="navbar-icon">
+					<form class="d-flex">
+						<button class="btn btn-outline-dark" type="submit">
+							<i class="bi-cart-fill me-1"></i>
+							<a href="{{ path('app_cart')}}">Mon Panier</a>
+							<span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+						</button>
+					</form>
+				</div>
+			</div>
+		</nav>
+		<!-- NavBar Stop-->
+	</header>
+	<!-- Header Stop-->
+	<!-- Body Start-->
+	<body>
+
+		<!-- definition du block content -->
+		{% block content %}{% endblock %}
+		<!-- /.container -->
+	</body>
 </html>
+</div>
+</body>
+<!-- Body Stop-->
+<!-- FOOTER -->
+<footer class="footer-custom">
+<div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
+<div class="container py-5">
+	<div class="row g-5">
+		<div class="col-lg-3 col-md-23">
+			<h4 class="text-light mb-4">Adresse</h4>
+			<p class="mb-2">
+				<i class="fa fa-map-marker-alt me-3"></i>ZA Bois Carré 97232 Le Lamentin Martinique</p>
+			<p class="mb-2">
+				<i class="fa fa-phone-alt me-3"></i>05 96 79 61 97</p>
+			<p class="mb-2">
+				<i class="fa fa-envelope me-3"></i>atb@wipexcorp.com</p>
+		</div>
+		<div class="col-lg-3 col-md-6">
+			<h4 class="text-light mb-4">Horaire D'Ouverture</h4>
+			<h6 class="text-light">Lundi - Samedi:</h6>
+			<p class="mb-2">09.00 - 19.00</p>
+		</div>
+		<div class="col-lg-3 col-md-6">
+			<h4 class="text-light mb-4">Services</h4>
+			<a class="btn btn-link" href="">Test Diagnostique</a>
+			<a class="btn btn-link" href="">Atelier Moteur</a>
+			<a class="btn btn-link" href="">Reprogrammation Moteur</a>
+			<a class="btn btn-link" href="">Le Coin Moto</a>
+		</div>
+		<div class="col-lg-3 col-md-6">
+			<h4 class="text-light mb-2">Newsletter</h4>
+			<p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+			<div class="position-relative mx-auto" style="max-width: 400px;">
+				<input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Votre adresse mail">
+				<button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="container">
+	<div class="copyright">
+		<div class="row">
+			<div class="text-center text-md-center mb-3 mb-md-0">
+				Copyright &copy;
+				<a class="border-bottom" href="{{ path('app_products') }}">AutoBoost 2022</a>
+				<small>La pièce performance dans la caraïbe, All Right Reserved.</small>
+				<br>
 
+				<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+				Designed By
+				<a class="border-bottom" href="https://htmlcodex.com">Computex-Services</a>
+				<br>
+				<small>
+					<a href="#">Privacy</a>
+					&middot;
+					<a href="#">Terms</a>
+				</small>
+				<br>
+			</div>
+		</div>
+	</div>
+</div></div></div></div></footer></main></html>
