--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -1,31 +1,33 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{product.name}} - AUTOBOOST{% endblock %}
+{% block title %}
+	{{product.name}}
+	- AUTOBOOST
+{% endblock %}
 
 {% block content %}
-    <img src="https://www.pierre-giraud.com/bootstrap-carrousel-slide-3.jpg" alt="" class="d-block w-100"> 
-    <br>                        
-    <br>                        
-    <br>                        
-    <div class="col-md-5">
-      <img src="/uploads/{{product.illustration}}" alt="{{product.name}}" class="img-fluid">
-    </div>
-    <div class="col-md-7 my-auto">
-      <h3>{{product.name}}</h3>
-      <p>{{product.subtitle}}</p>
-      <span class="product-page-price">{{ (product.price / 100)|number_format(2, ',')}} €</span>
-      <hr>
-      <p>
-        {{product.description}}
-      </p>
-      <hr>
-      <a href="{{path('add_to_cart', {'id':product.id})}}" class="btn btn-primary">Ajouter au panier</a></div>{#ajout de la route pour suppression du panier #}
-    <br>
-    <br>
-    <br>
-    <a href="{{ path('app_products') }}">Retourner aux produits</a>
-    </div>
-  {% endblock %}
-
-    
-
+	<img src="{{asset('assets/img/bilstein.jpeg')}}" alt="" class="d-block w-100">
+	<br>
+	<br>
+	<br>
+	<div class="col-md-5">
+		<img src="/uploads/{{product.illustration}}" alt="{{product.name}}" class="img-fluid">
+	</div>
+	<div class="col-md-7 my-auto">
+		<h3>{{product.name}}</h3>
+		<p>{{product.subtitle}}</p>
+		<span class="product-page-price">{{ (product.price / 100)|number_format(2, ',')}}
+			€</span>
+		<hr>
+		<p>
+			{{product.description}}
+		</p>
+		<hr>
+		<a href="{{path('add_to_cart', {'id':product.id})}}" class="btn btn-primary">Ajouter au panier</a>
+	</div>
+	{#ajout de la route pour suppression du panier #}
+	<br>
+	<br>
+	<br>
+	<a href="{{ path('app_products') }}">Retourner aux produits</a>
+</div>{% endblock %}
